infra/hris_cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth-service-sg
