infra/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hris-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hris-app
spec:
  hosts:
  - "*"
  gateways:
  - hris-gateway
  http:
  - match:
    - uri:
        prefix: /auth-service
    route:
    - destination:
        host: auth-service.auth-service.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /ui
    route:
    - destination:
        host: ui.ui.svc.cluster.local
        port:
          number: 80
