infra/hris-gateway.yaml
#
# A simple ingress gateway for the hris app.
#

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hris-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
    - "*"
    tls:
      mode: SIMPLE
      credentialName: ingress-tls-cert
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hris
spec:
  hosts:
  - "*"
  gateways:
  - hris-gateway
  http:
  - match:
    - uri:
        prefix: "/auth-service"
    rewrite:
      uri: "/api-docs"
    route:
    - destination:
        port:
          number: 80
        host: auth-service
  - match:
    - uri:
        prefix: "/ui"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 80
        host: ui

  # - match:
  #   - uri:
  #       prefix: "/serviceB"
  #   rewrite:
  #     uri: "/dashboard"
  #   route:
  #   - destination:
  #       port:
  #         number: 3000
  #       host: auth-service
